--- a/Align-on-cue/server/package.json
+++ b/Align-on-cue/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "align-on-cue-captcha-server",
-  "version": "1.3.0",
-  "description": "Align-on-Cue CAPTCHA v1.3 - Advanced multi-layer human verification server with temporal analysis, micro-behavior detection, and visual cryptography",
+  "version": "2.0.0",
+  "description": "Align-on-Cue CAPTCHA v2.0 - Multi-modal human verification with gesture recognition, stroke biometrics, and combined challenges",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
